; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/extr_irq.c_pci_free_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/extr_irq.c_pci_free_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pci_free_irq(%struct.pci_dev* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.pci_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @pci_irq_vector(%struct.pci_dev* %7, i32 %8)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @free_irq(i32 %9, i8* %10)
  %12 = call i32 @kfree(i32 %11)
  ret void
}

declare dso_local i32 @kfree(i32) #1

declare dso_local i32 @free_irq(i32, i8*) #1

declare dso_local i32 @pci_irq_vector(%struct.pci_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
